@@ -1,5 +1,7 @@
 2016-07-03  Carl Hetherington  <cth@carlh.net>
 
+	* Fix line spacing adjustment of SSA/ASS.
+
 	* Updated nl_NL translation from Rob van Nieuwkerk.
 
 2016-07-02  Carl Hetherington  <cth@carlh.net>
